--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<div class="box1"> <a href="https://t.me/rubellivetv" data-sveltekit-preload-data="hover"><div class="card w-40 bg-gray-100 rounded-xl bg-base-100 shadow-lg h-48 mb-4 flex flex-col"> <img src="" loading="lazy" class="h-28 mt-5 m-auto opacity-100"> <div class="mb-5 opacity-100">
 		<h2 class="text-center text-sm font-bold">JOIN TELEGRAM</h2>
 		<div class="flex justify-center space-x-1">
-			<p class="text-xs text-center">Join Now</p>
+			<p class="text-xs text-center">Join R Now</p>
 		</div>
 	</div>
 </div> </a> </div>
