--- a/index.html
+++ b/index.html
@@ -39,33 +39,33 @@
       <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Willew/'"><img src="DBC News.png" alt="1"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Willew/'"><img src="ptv.jpg" alt="15"></a></li> 
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Willew/'"><img src="willowhd.jpg" alt="1"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Tsports-Live/'"><img src="tsports.png" alt="1"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Nagorik-Tv/'"><img src="nagorik tv.png" alt="1"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/t-Sports/'"><img src="tsports.png" alt="1"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Nagor/'"><img src="nagorik tv.png" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Gtvlive/'"><img src="gtv2.jpg" alt="1"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Anondo-tv/'"><img src="Anondo tv.png" alt="15"></a></li> 
-<li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Channel-i/'"><img src="Channel i.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Duronto-Live/'"><img src="DURONTO TV.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Channel-9/'"><img src="Channel 9.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Ekattor-Tv/'"><img src="Ekattor News.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Somoy-News/'"><img src="Somoy News.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Pogo-kids/'"><img src="pogo.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Zee-Bangla/'"><img src="zeebanglahd.jpg" alt="15"></a></li> 
+<li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Chennel-i/'"><img src="Channel i.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Duronto/'"><img src="DURONTO TV.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/chennel9/'"><img src="Channel 9.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Ekttor/'"><img src="Ekattor News.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Somay/'"><img src="Somoy News.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/pogo/'"><img src="pogo.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Zee-Ban/'"><img src="zeebanglahd.jpg" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Kids-Creation-/'"><img src="KidsCreation.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Copa-America-/'"><img src="Islam Bangla.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Masti-Music/'"><img src="masti music.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Masti-Ch/'"><img src="masti music.png" alt="15"></a></li> 
       <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Bangla-Tv/'"><img src="Bangla TV.jpg" alt="2"></a></li>
       <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Banglavision-/'"><img src="banglavision.jpg" alt="3"></a></li>
       <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Boishakhi-Tv/'"><img src="boishakhi.png" alt="4"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Deepto-Tv/'"><img src="dipto.jpg" alt="5"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://allinonereborn.github.io/allinone_live_tv/live/discovery/Play.html?id=3'"><img src="discovarry kidz.jpg" alt="9"></a></li>
  
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Enterr10-Bangla-/'"><img src="enter10bangla.jpg" alt="16"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Star-Jalsha-HD/'"><img src="starjalsha.jpg" alt="14"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Colours-Bangla-HD/'"><img src="colorsbangla.jpg" alt="15"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/enter-10/'"><img src="enter10bangla.jpg" alt="16"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Star-jal/'"><img src="starjalsha.jpg" alt="14"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Color-b/'"><img src="colorsbangla.jpg" alt="15"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Khusbo-Bangla/'"><img src="Khusbo.png" alt="15"></a></li> 
-	  <li><a href="javascript:void();" onclick="player.location.href='https://younusali013.github.io/sony-aath/'"><img src="sony aath2.jpg" alt="18"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Songeet-Bangla-/'"><img src="sangeetbangla.jpg" alt="20"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/Discovery-Bangla-/'"><img src="Discovaryhd.png" alt="21"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Sony-ath/'"><img src="sony aath2.jpg" alt="18"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Sangeet-bangla/'"><img src="sangeetbangla.jpg" alt="20"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Discovery/'"><img src="Discovaryhd.png" alt="21"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rubel-live-tv.github.io/LTC/'"><img src="tlc.png" alt="24"></a></li>
 	  
 	  
