--- a/index.html
+++ b/index.html
@@ -36,37 +36,37 @@
   </div>
   <div class="col-xs-12 col-md-2 channel-list">
     <ul class="thumbnail-slider">
-      <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Willew/'"><img src="DBC News.png" alt="1"></a></li>
-<li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Willew/'"><img src="ptv.jpg" alt="15"></a></li> 
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Willew/'"><img src="willowhd.jpg" alt="1"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/t-Sports/'"><img src="tsports.png" alt="1"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Nagor/'"><img src="nagorik tv.png" alt="1"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Thalna-TV/'"><img src="gtv2.jpg" alt="1"></a></li>
-<li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Thalna-TV/'"><img src="Anondo tv.png" alt="15"></a></li> 
-<li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Chennel-i/'"><img src="Channel i.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Duronto/'"><img src="DURONTO TV.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/chennel9/'"><img src="Channel 9.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Ekttor/'"><img src="Ekattor News.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Somay/'"><img src="Somoy News.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/pogo/'"><img src="pogo.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Zee-Ban/'"><img src="zeebanglahd.jpg" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Thalna-TV/'"><img src="KidsCreation.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Thalna-TV/'"><img src="Islam Bangla.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Masti-Ch/'"><img src="masti music.png" alt="15"></a></li> 
-      <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Thalna-TV/'"><img src="Bangla TV.jpg" alt="2"></a></li>
-      <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Thalna-TV/'"><img src="banglavision.jpg" alt="3"></a></li>
-      <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Thalna-TV/'"><img src="boishakhi.png" alt="4"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Thalna-TV/'"><img src="dipto.jpg" alt="5"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Thalna-TV/'"><img src="discovarry kidz.jpg" alt="9"></a></li>
+      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="DBC News.png" alt="1"></a></li>
+<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="ptv.jpg" alt="15"></a></li> 
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="willowhd.jpg" alt="1"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/t-Sports/'"><img src="tsports.png" alt="1"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Nagor/'"><img src="nagorik tv.png" alt="1"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="gtv2.jpg" alt="1"></a></li>
+<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Anondo tv.png" alt="15"></a></li> 
+<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Chennel-i/'"><img src="Channel i.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Duronto/'"><img src="DURONTO TV.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/chennel9/'"><img src="Channel 9.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Ekttor/'"><img src="Ekattor News.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Somay/'"><img src="Somoy News.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/pogo/'"><img src="pogo.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Ban/'"><img src="zeebanglahd.jpg" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="KidsCreation.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Islam Bangla.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Masti-Ch/'"><img src="masti music.png" alt="15"></a></li> 
+      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Bangla TV.jpg" alt="2"></a></li>
+      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="banglavision.jpg" alt="3"></a></li>
+      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="boishakhi.png" alt="4"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="dipto.jpg" alt="5"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="discovarry kidz.jpg" alt="9"></a></li>
  
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/enter-10/'"><img src="enter10bangla.jpg" alt="16"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Star-jal/'"><img src="starjalsha.jpg" alt="14"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Color-b/'"><img src="colorsbangla.jpg" alt="15"></a></li>
-<li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Thalna-TV/'"><img src="Khusbo.png" alt="15"></a></li> 
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Sony-ath/'"><img src="sony aath2.jpg" alt="18"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Sangeet-bangla/'"><img src="sangeetbangla.jpg" alt="20"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Discovery/'"><img src="Discovaryhd.png" alt="21"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahulraj94393.github.io/Thalna-TV/'"><img src="tlc.png" alt="24"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/enter-10/'"><img src="enter10bangla.jpg" alt="16"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Star-jal/'"><img src="starjalsha.jpg" alt="14"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Color-b/'"><img src="colorsbangla.jpg" alt="15"></a></li>
+<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Khusbo.png" alt="15"></a></li> 
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sony-ath/'"><img src="sony aath2.jpg" alt="18"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sangeet-bangla/'"><img src="sangeetbangla.jpg" alt="20"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Discovery/'"><img src="Discovaryhd.png" alt="21"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="tlc.png" alt="24"></a></li>
 	  
 	  
 	</ul>
