--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			}
 		}
 	</script>
-    <link rel="shortcut icon" type="x-icon" href="https://i.postimg.cc/sXk5rHMM/20240625-113222.png">    
+    <link rel="shortcut icon" type="x-icon" href="https://vipsavings.com//media/merchant/logo/vip-savings-network-1aljen.jpeg">    
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,7 +36,7 @@
   </div>
   <div class="col-xs-12 col-md-2 channel-list">
     <ul class="thumbnail-slider">
-      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="DBC News.png" alt="1"></a></li>
+      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BDC/'"><img src="DBC News.png" alt="1"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="ptv.jpg" alt="15"></a></li> 
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="willowhd.jpg" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/t-Sports/'"><img src="tsports.png" alt="1"></a></li>
@@ -50,13 +50,14 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Somay/'"><img src="Somoy News.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/pogo/'"><img src="pogo.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Ban/'"><img src="zeebanglahd.jpg" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/zee-ban-2/'"><img src="zeebanglahd.jpg" alt="15"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="KidsCreation.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Islam Bangla.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Masti-Ch/'"><img src="masti music.png" alt="15"></a></li> 
-      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Bangla TV.jpg" alt="2"></a></li>
-      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="banglavision.jpg" alt="3"></a></li>
-      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="boishakhi.png" alt="4"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="dipto.jpg" alt="5"></a></li>
+      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Bangla-tv/'"><img src="Bangla TV.jpg" alt="2"></a></li>
+      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Bangla-visi/'"><img src="banglavision.jpg" alt="3"></a></li>
+      <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Boishaki/'"><img src="boishakhi.png" alt="4"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Dipto/'"><img src="dipto.jpg" alt="5"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="discovarry kidz.jpg" alt="9"></a></li>
  
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/enter-10/'"><img src="enter10bangla.jpg" alt="16"></a></li>
@@ -76,11 +77,11 @@
  <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()">বর্তমানে আমাদের সাইট আপডেট চলছে। আপডেট চলাকালীন সময় কিছু চ্যানেল ডাউন হতে পারে, আপনাকে বিজ্ঞপ্তির মাধ্যমে জানানো হবে। সাময়িক অসুবিধার জন্য আমারা আন্তরিকভাবে দুঃখিত। আমাদের সাথে থাকার জন্য শুভেচ্ছা ও অভিনন্দন।   </marquee> </div> 	
 	
 		<!-- container --> 
-	<div style="text-align: center; background-size: cover;">© Copyright 2024 Rahul Sarkar, Developed  By: <img scr="https://gifdb.com/images/high/telegram-cute-blue-shades-logo-vsjoshidc3e9gylv.gif"><a  href="https://t.me/m3u8livetv" target="_blank">Rahul Sarkar</a></div>
-	<div class="box1"> <a href="https://t.me/rubellivetv" data-sveltekit-preload-data="hover"><div class="card w-40 bg-gray-100 rounded-xl bg-base-100 shadow-lg h-48 mb-4 flex flex-col"> <img src="" loading="lazy" class="h-28 mt-5 m-auto opacity-100"> <div class="mb-5 opacity-100">
+	<div style="text-align: center; background-size: cover;">© Copyright 2024 Rahul Sarkar, Developed  By: <img scr="https://rahultv20.github.io/VIP-TV-2/"><a  href="https://rahultv20.github.io/VIP-TV-2/" target="_blank">Rahul Sarkar</a></div>
+	<div class="box1"> <a href="https://rahultv20.github.io/VIP-TV-2/" data-sveltekit-preload-data="hover"><div class="card w-40 bg-gray-100 rounded-xl bg-base-100 shadow-lg h-48 mb-4 flex flex-col"> <img src="" loading="lazy" class="h-28 mt-5 m-auto opacity-100"> <div class="mb-5 opacity-100">
 		<h2 class="text-center text-sm font-bold">JOIN TELEGRAM</h2>
 		<div class="flex justify-center space-x-1">
-			<p class="text-xs text-center">Join R Now</p>
+			<p class="text-xs text-center">Join Now</p>
 		</div>
 	</div>
 </div> </a> </div>
