--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Nagor/'"><img src="nagorik tv.png" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="gtv2.jpg" alt="1"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Anondo tv.png" alt="15"></a></li> 
-<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Chennel-i/'"><img src="Channel i.png" alt="15"></a></li> 
+<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Chenneli/'"><img src="Channel i.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Duronto/'"><img src="DURONTO TV.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/chennel9/'"><img src="Channel 9.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Ekttor/'"><img src="Ekattor News.png" alt="15"></a></li> 
