--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <ul class="thumbnail-slider">
       <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BDC/'"><img src="DBC News.png" alt="1"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="ptv.jpg" alt="15"></a></li> 
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="willowhd.jpg" alt="1"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BDC/'"><img src="willowhd.jpg" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/t-Sports/'"><img src="tsports.png" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Nagor/'"><img src="nagorik tv.png" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="gtv2.jpg" alt="1"></a></li>
