--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Bangla-tv/'"><img src="Bangla TV.jpg" alt="2"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/SATV/'"><img src="satv.jpg" alt="2"></a></li>
       <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Bangla-visi/'"><img src="banglavision.jpg" alt="3"></a></li>
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Jamuna-TV/'"><img src="jamuna.jpg" alt="3"></a></li>
       <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Boishaki/'"><img src="boishakhi.png" alt="4"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Dipto/'"><img src="dipto.jpg" alt="5"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="discovarry kidz.jpg" alt="9"></a></li>
