--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Chenneli/'"><img src="Channel i.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Duronto/'"><img src="DURONTO TV.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/chennel9/'"><img src="Channel 9.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Ekttor/'"><img src="Ekattor News.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='chunks.m3u8'"><img src="Ekattor News.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Somay/'"><img src="Somoy News.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/pogo/'"><img src="pogo.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Ban/'"><img src="zeebanglahd.jpg" alt="15"></a></li> 
