--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
   </div>
 </div>
 <!-- container -->
- <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()">বর্তমানে আমাদের সাইট আপডেট চলছে। আপডেট চলাকালীন সময় কিছু চ্যানেল ডাউন হতে পারে, আপনাকে বিজ্ঞপ্তির মাধ্যমে জানানো হবে। সাময়িক অসুবিধার জন্য আমারা আন্তরিকভাবে দুঃখিত। আমাদের সাথে থাকার জন্য শুভেচ্ছা ও অভিনন্দন।   </marquee> </div> 	
+ <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> নতুন চ্যানেল add করা হচ্ছে অপেক্ষা করুন। সার্ভার টি নতুন এইজন্য অনেক ত্রুটি রয়েছে, খুব দ্রুত সমাধান হবে। কারো কোনো চ্যানেল দেখতে সমস্যা হলে জানাবেন, আপডেট করে সমাধান করা হবে। ১০০+ চ্যানেল থাকবে সম্পূর্ণ ফ্রিতে দেখতে পাবেন। যেকোনো প্রয়োজনে ফেসবুকে মেসেজ করে জানাতে পারেন। 
+ </marquee> </div> 	
 	
 		<!-- container --> 
 	<div style="text-align: center; background-size: cover;">© Copyright 2024 Rahul Sarkar, Developed  By: <img scr="https://rahultv20.github.io/VIP-TV-2/"><a  href="https://rahultv20.github.io/VIP-TV-2/" target="_blank">Rahul Sarkar</a></div>
