--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Chenneli/'"><img src="Channel i.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Duronto/'"><img src="DURONTO TV.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/chennel9/'"><img src="Channel 9.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='chunks.m3u8'"><img src="Ekattor News.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Ekttor/'"><img src="Ekattor News.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Somay/'"><img src="Somoy News.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/pogo/'"><img src="pogo.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Ban/'"><img src="zeebanglahd.jpg" alt="15"></a></li> 
@@ -73,7 +73,7 @@
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sony-ath/'"><img src="sony aath2.jpg" alt="18"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sangeet-bangla/'"><img src="sangeetbangla.jpg" alt="20"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Discovery/'"><img src="Discovaryhd.png" alt="21"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="tlc.png" alt="24"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Chenema/'"><img src="Zee cine.png" alt="24"></a></li>
 	  
 	  
 	</ul>
