--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   </div>
   <div class="col-xs-12 col-md-2 channel-list">
     <ul class="thumbnail-slider">
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Masti-Ch/'"><img src="https://vipsavings.com//media/merchant/logo/vip-savings-network-1aljen.jpeg" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BTV/'"><img src="btv.png" alt="1"></a></li>
       <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BDC/'"><img src="DBC News.png" alt="1"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="ptv.jpg" alt="15"></a></li> 
