--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Ekttor/'"><img src="Ekattor News.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Somay/'"><img src="Somoy News.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/pogo/'"><img src="pogo.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Ban/'"><img src="zeebanglahd.jpg" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/zee-ban-2/'"><img src="zeebanglahd.jpg" alt="15"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="KidsCreation.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Islam Bangla.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Masti-Ch/'"><img src="masti music.png" alt="15"></a></li> 
@@ -68,6 +66,9 @@
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="discovarry kidz.jpg" alt="9"></a></li>
  
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/enter-10/'"><img src="enter10bangla.jpg" alt="16"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Ban/'"><img src="zeebanglahd.jpg" alt="15"></a></li> 
+	 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/zee-ban-2/'"><img src="zeebanglahd.jpg" alt="15"></a></li>
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Bangla-chinema/'"><img src="zee bangla chinema.jpg" alt="15"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Star-jal/'"><img src="starjalsha.jpg" alt="14"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Color-b/'"><img src="colorsbangla.jpg" alt="15"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Khusbo.png" alt="15"></a></li> 
