--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Masti-Ch/'"><img src="https://vipsavings.com//media/merchant/logo/vip-savings-network-1aljen.jpeg" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BTV/'"><img src="btv.png" alt="1"></a></li>
       <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BDC/'"><img src="DBC News.png" alt="1"></a></li>
-<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="ptv.jpg" alt="15"></a></li> 
+<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/PTV/'"><img src="ptv.jpg" alt="15"></a></li> 
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BDC/'"><img src="willowhd.jpg" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/t-Sport/'"><img src="tsports.png" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Nagorik/'"><img src="nagorik tv.png" alt="1"></a></li>
