--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
 </div>
 <!-- container -->
  <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> নতুন চ্যানেল add করা হচ্ছে অপেক্ষা করুন। সার্ভার টি নতুন এইজন্য অনেক ত্রুটি রয়েছে, খুব দ্রুত সমাধান হবে। কারো কোনো চ্যানেল দেখতে সমস্যা হলে জানাবেন, আপডেট করে সমাধান করা হবে। ১০০+ চ্যানেল থাকবে সম্পূর্ণ ফ্রিতে দেখতে পাবেন। যেকোনো প্রয়োজনে ফেসবুকে মেসেজ করে জানাতে পারেন। 
- </marquee> </div> 	
+ </marquee> </div> 
+	<div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> টেলিগ্রাম চ্যানেল নিচের লিংকে add করা হয়েছে। সবাই join দিন, এবং আপনাদের সুবিধা অসুবিধা গুলো বলুন।  </marquee> </div>
 	
 		<!-- container --> 
-	<div style="text-align: center; background-size: cover;">© Copyright 2024 Rahul Sarkar, Developed  By: <img scr="https://rahultv20.github.io/VIP-TV-2/"><a  href="https://rahultv20.github.io/VIP-TV-2/" target="_blank">Rahul Sarkar</a></div>
+	<div style="text-align: center; background-size: cover;">© Copyright 2024 Rahul Sarkar, Developed  By: <img scr="https://t.me/+m5cQ0lcUMOwxY2Rl"><a  href="https://t.me/+m5cQ0lcUMOwxY2Rl" target="_blank">Rahul Sarkar</a></div>
 	<div class="box1"> <a href="https://rahultv20.github.io/VIP-TV-2/" data-sveltekit-preload-data="hover"><div class="card w-40 bg-gray-100 rounded-xl bg-base-100 shadow-lg h-48 mb-4 flex flex-col"> <img src="" loading="lazy" class="h-28 mt-5 m-auto opacity-100"> <div class="mb-5 opacity-100">
 		<h2 class="text-center text-sm font-bold">JOIN TELEGRAM</h2>
 		<div class="flex justify-center space-x-1">
