--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	
 		<!-- container --> 
 	<div style="text-align: center; background-size: cover;">© Copyright 2024 Rahul Sarkar, Developed  By: <img scr="https://t.me/+m5cQ0lcUMOwxY2Rl"><a  href="https://t.me/+m5cQ0lcUMOwxY2Rl" target="_blank">Rahul Sarkar</a></div>
-	<div class="box1"> <a href="https://rahultv20.github.io/VIP-TV-2/" data-sveltekit-preload-data="hover"><div class="card w-40 bg-gray-100 rounded-xl bg-base-100 shadow-lg h-48 mb-4 flex flex-col"> <img src="" loading="lazy" class="h-28 mt-5 m-auto opacity-100"> <div class="mb-5 opacity-100">
+	<div class="box1"> <a href="https://t.me/+m5cQ0lcUMOwxY2Rl" data-sveltekit-preload-data="hover"><div class="card w-40 bg-gray-100 rounded-xl bg-base-100 shadow-lg h-48 mb-4 flex flex-col"> <img src="" loading="lazy" class="h-28 mt-5 m-auto opacity-100"> <div class="mb-5 opacity-100">
 		<h2 class="text-center text-sm font-bold">JOIN TELEGRAM</h2>
 		<div class="flex justify-center space-x-1">
 			<p class="text-xs text-center">Join Now</p>
