--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/t-Sport/'"><img src="tsports.png" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Nagorik/'"><img src="nagorik tv.png" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/G-TV/'"><img src="gtv2.jpg" alt="1"></a></li>
-<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Anondo tv.png" alt="15"></a></li> 
+<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Ananda-tv/'"><img src="Anondo tv.png" alt="15"></a></li> 
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Chenneli/'"><img src="Channel i.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Duronto/'"><img src="DURONTO TV.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/chennel9/'"><img src="Channel 9.png" alt="15"></a></li> 
