--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Bangla-chinema/'"><img src="zee bangla chinema.jpg" alt="15"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Star-jal/'"><img src="starjalsha.jpg" alt="14"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Color-b/'"><img src="colorsbangla.jpg" alt="15"></a></li>
-<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Khusbo.png" alt="15"></a></li> 
+<li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Khysbo-bangla/'"><img src="Khusbo.png" alt="15"></a></li> 
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sony-ath/'"><img src="sony aath2.jpg" alt="18"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sangeet-bangla/'"><img src="sangeetbangla.jpg" alt="20"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Discovery/'"><img src="Discovaryhd.png" alt="21"></a></li>
