--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Somay/'"><img src="Somoy News.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/pogo/'"><img src="pogo.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="KidsCreation.png" alt="15"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="Islam Bangla.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Thalna-TV/'"><img src="thalnatv.gif" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Masti-Ch/'"><img src="masti music.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/9xm/'"><img src="9xm.png" alt="15"></a></li>
       <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Bangla-tv/'"><img src="Bangla TV.jpg" alt="2"></a></li>
