--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BTV2/'"><img src="Bangladesh_Television_Logo.svg" alt="1"></a></li>
       <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BDC/'"><img src="DBC News.png" alt="1"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/PTV/'"><img src="ptv.jpg" alt="15"></a></li> 
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BDC/'"><img src="willowhd.jpg" alt="1"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="willowhd.jpg" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/t-Sport/'"><img src="tsports.png" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Nagorik/'"><img src="nagorik tv.png" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/G-TV/'"><img src="gtv2.jpg" alt="1"></a></li>
