--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/zee-ban-2/'"><img src="zeebanglahd.jpg" alt="15"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Bangla-chinema/'"><img src="zee bangla chinema.jpg" alt="15"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Star-jal/'"><img src="starjalsha.jpg" alt="14"></a></li>
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Jalsha-Movies-ha/'"><img src="Jalsha_Movies_HD_alt.webp" alt="14"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Color-b/'"><img src="colorsbangla.jpg" alt="15"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Khysbo-bangla/'"><img src="Khusbo.png" alt="15"></a></li> 
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sony-ath/'"><img src="sony aath2.jpg" alt="18"></a></li>
