--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
   </div>
 </div>
 <!-- container -->
- <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> নতুন চ্যানেল add করা হচ্ছে অপেক্ষা করুন। সার্ভার টি নতুন এইজন্য অনেক ত্রুটি রয়েছে, খুব দ্রুত সমাধান হবে। কারো কোনো চ্যানেল দেখতে সমস্যা হলে জানাবেন, আপডেট করে সমাধান করা হবে। ১০০+ চ্যানেল থাকবে সম্পূর্ণ ফ্রিতে দেখতে পাবেন। যেকোনো প্রয়োজনে ফেসবুকে মেসেজ করে জানাতে পারেন। 
- </marquee> </div> 
+ <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> 📢📢 আজকে রাতে সার্ভার আপডেট হবে নতুন নতুন চ্যানেল add হবে।  কারো কোনো পছন্দের চ্যানেল add করতে হলে টেলিগ্রামে গ্রুপে জানাতে পারেন। </marquee> </div> 
 	<div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> টেলিগ্রাম চ্যানেল নিচের লিংকে add করা হয়েছে। সবাই join দিন, এবং আপনাদের সুবিধা অসুবিধা গুলো বলুন।  </marquee> </div>
 	
 		<!-- container --> 
