--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/SATV/'"><img src="satv.jpg" alt="2"></a></li>
       <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Bangla-visi/'"><img src="banglavision.jpg" alt="3"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Jamuna-TV/'"><img src="jamuna.png" alt="3"></a></li>
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/independ/'"><img src="channels4_profile.jpg" alt="3"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/ATN-Bangla/'"><img src="atn.png" alt="3"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/R-TV/'"><img src="rtv.png" alt="3"></a></li>
       <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Boishaki/'"><img src="boishakhi.png" alt="4"></a></li>
