--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/enter-10/'"><img src="enter10bangla.jpg" alt="16"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Ban/'"><img src="zeebanglahd.jpg" alt="15"></a></li> 
 	 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/zee-ban-2/'"><img src="zeebanglahd.jpg" alt="15"></a></li>
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Bangla-3/'"><img src="zeebanglahd.jpg" alt="15"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Bangla-chinema/'"><img src="zee bangla chinema.jpg" alt="15"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Star-jal/'"><img src="starjalsha.jpg" alt="14"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Jalsha-Movies-ha/'"><img src="Jalsha_Movies_HD_alt.webp" alt="14"></a></li>
