--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Bangla-3/'"><img src="zeebanglahd.jpg" alt="15"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Bangla-chinema/'"><img src="zee bangla chinema.jpg" alt="15"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Star-jal/'"><img src="starjalsha.jpg" alt="14"></a></li>
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Star-jal-2/'"><img src="starjalsha.jpg" alt="14"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Star-jal-3/'"><img src="starjalsha.jpg" alt="14"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Jalsha-Movies-ha/'"><img src="Jalsha_Movies_HD_alt.webp" alt="14"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Color-b/'"><img src="colorsbangla.jpg" alt="15"></a></li>
