--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-24-Ghonta/'"><img src="জি_২৪_ঘণ্টা_এর_লোগো.png" alt="20"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Discovery/'"><img src="Discovaryhd.png" alt="21"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Chenema/'"><img src="Zee cine.png" alt="24"></a></li>
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-Action/'"><img src="1170x658withlog1953200347.webp" alt="24"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/-Picture/'"><img src="38482_1_home_big.avif" alt="24"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sony-Max-hd/'"><img src="sony max.png" alt="24"></a></li>
 	  
