--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
   </div>
 </div>
 <!-- container -->
- <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> 📢📢 আজকে রাতে সার্ভার আপডেট হবে নতুন নতুন চ্যানেল add হবে।  কারো কোনো পছন্দের চ্যানেল add করতে হলে টেলিগ্রামে গ্রুপে জানাতে পারেন। </marquee> </div> 
-	<div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> টেলিগ্রাম চ্যানেল নিচের লিংকে add করা হয়েছে। সবাই join দিন, এবং আপনাদের সুবিধা অসুবিধা গুলো বলুন।  </marquee> </div>
+ <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> 📢📢 কিছু চ্যানেল add হয়েছে। আরো add হবে।  </marquee> </div> 
+	<div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> সবাই join দিন, এবং আপনাদের সুবিধা অসুবিধা গুলো বলুন। 📢 যেকোনো সময় আমার সাথে যোগাযোগ করতে চাইলে ফেসবুকে আমার সাথে add হতে চাইলে রিকোয়েস্ট দিন। </marquee> </div>
 	
 		<!-- container --> 
 	<div style="text-align: center; background-size: cover;">© Copyright 2024 Rahul Sarkar, Developed  By: <img scr="https://t.me/+m5cQ0lcUMOwxY2Rl"><a  href="https://t.me/+m5cQ0lcUMOwxY2Rl" target="_blank">Rahul Sarkar</a></div>
