--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sony-ath/'"><img src="sony aath2.jpg" alt="18"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sangeet-bangla/'"><img src="sangeetbangla.jpg" alt="20"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Zee-24-Ghonta/'"><img src="জি_২৪_ঘণ্টা_এর_লোগো.png" alt="20"></a></li>
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/R-Bangla/'"><img src="R._Bangla.png" alt="20"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/ABP-Ananda/'"><img src="ABP_Ananda_logo.svg" alt="20"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/tv9-bangla/'"><img src="download.png" alt="20"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Discovery/'"><img src="Discovaryhd.png" alt="21"></a></li>
