--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/PTV/'"><img src="ptv.jpg" alt="15"></a></li> 
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="willowhd.jpg" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/t-Sport/'"><img src="tsports.png" alt="1"></a></li>
-	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Nagorik/'"><img src="nagorik tv.png" alt="1"></a></li>
+	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Astro-Cricket/'"><img src="Astro_Cricket.png" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/G-TV/'"><img src="gtv2.jpg" alt="1"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/G-TV2/'"><img src="gtv2.jpg" alt="1"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sont-Sports-5/'"><img src="SONY_SportsTen5_HD.png" alt="1"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Ananda-tv/'"><img src="Anondo tv.png" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Nagorik/'"><img src="nagorik tv.png" alt="1"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BDC/'"><img src="DBC News.png" alt="1"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Chenneli/'"><img src="Channel i.png" alt="15"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Duronto/'"><img src="DURONTO TV.png" alt="15"></a></li> 
