--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </div>
 </div>
 <!-- container -->
- <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> 📢📢 কিছু চ্যানেল add হয়েছে। আরো add হবে।  </marquee> </div> 
+ <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> 📢📢 বিশেষ ঘোষণা 👉👉 🔴কিছু চ্যানেল HLS প্লেয়ার দিয়ে add করা হয়েছে। ঐ চ্যানেলগুলো প্লে করার সময় ad এসে অন্য পেজে নিয়ে যেতে পারে, ad পেজ কেটে দিয়ে আবার প্লে করলে ওই চ্যানেল স্মুথলি চলবে।🔴 </marquee> </div> 
 	<div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> সবাই join দিন, এবং আপনাদের সুবিধা অসুবিধা গুলো বলুন। 📢 যেকোনো সময় আমার সাথে যোগাযোগ করতে চাইলে ফেসবুকে আমার সাথে add হতে চাইলে রিকোয়েস্ট দিন। </marquee> </div>
 	
 		<!-- container --> 
