--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Rahul Live TV</title>
+<title>RAHUL LIVE TV</title>
 <link href="bootstrap.min.css" rel="stylesheet">
 <link href="style.css" rel="stylesheet">
 <!--[if lt IE 9]>
