--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Masti-Ch/'"><img src="https://vipsavings.com//media/merchant/logo/vip-savings-network-1aljen.jpeg" alt="1"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/BTV2/'"><img src="Bangladesh_Television_Logo.svg" alt="1"></a></li>
 <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/PTV/'"><img src="ptv.jpg" alt="15"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Sky-Sports-Cricket/'"><img src="sky-sports-cricket-uk.svg" alt="15"></a></li>
+	    <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/TNT-Sports/'"><img src="tnt.jpg" alt="15"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Willew/'"><img src="willowhd.jpg" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/t-Sport/'"><img src="tsports.png" alt="1"></a></li>
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rahultv20.github.io/Astro-Cricket/'"><img src="Astro_Cricket.png" alt="1"></a></li>
